[package]
name = "stack_frame_allocators"
description = "A set of allocators based off the concept of the stack and creating \"Frames\". Push frames onto the Stack, push values onto Frames, and pop entire Frames and their items"
repository = "https://github.com/IrrelevantGaymer/stack_frame_allocator/"
documentation = "https://docs.rs/stack_frame_allocators/latest/stack_frame_allocators/"
keywords = ["memory", "allocator", "stack", "safe"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "1.0.0"
edition = "2021"

[dependencies]
